...
            android:fillViewport="false"
            android:overScrollMode="never"
            android:requiresFadingEdge="vertical"
            android:scrollbars="none">

            <RelativeLayout
                android:id="@+id/reasonFooter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtFeedbackQstn"
                    android:layout_width="match_parent"
...
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_medium" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/txtReason"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_below="@+id/txtFeedbackQstn"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
...
                    android:lines="3"
                    android:maxLines="3"
                    android:minLines="3"
                    android:textSize="@dimen/text_medium"/>

                <LinearLayout
                    android:id="@+id/emailFollowUpContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtReason"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/chkEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="0dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:textSize="@dimen/text_medium" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
...
            android:fillViewport="false"
            android:overScrollMode="never"
            android:requiresFadingEdge="vertical"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/followUpOptionsContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

            </LinearLayout>
...
